<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                android:id="@+id/quest_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:text="@{quiz.text}"
                tools:text="Question text"
            android:textAppearance="@style/TextAppearance.Title"
        />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/answer_view_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <Button
            android:id="@+id/check_answer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <data>

        <variable
            name="quiz"
            type="com.example.quiz.model.Quiz" />

        <variable
            name="viewModel"
            type="com.example.quiz.quizview.QuizViewViewModel" />
    </data>
</layout>