<resources>
    <string name="app_name">Finniz</string>

    <!--  Intent extra keys  -->
    <string name="intent_categoryId">categoryId</string>
    <string name="intent_categoryName">categoryName</string>

    <!--  CategoryListFragment  -->
    <string name="category_title">Categories</string>
    <string name="category_image">Picture of category</string>
    <string name="app_bar_image">https://airfactsjournal.com/files/2019/08/question-mark-2110767_960_720.jpg</string>

    <!--  QuizFragment  -->
    <string name="correct_answer">Correct</string>
    <string name="incorrect_answer">Incorrect</string>
    <string name="result">%1$s</string>
    <string name="explanation_button_label">Explanation</string>
    <string name="check_result_button_label">Check result</string>

    <!--  PhotoDialogFragment  -->
    <string name="photo_dialog_title">Bigger Photo</string>
    <string name="cancel">Cancel</string>

    <!--  Message fragment  -->
    <string name="send_button_label">Send</string>
    <string name="message_edit_text_hint">Type a message</string>
    <string name="sign_out_menu_label">Sign out</string>

    <!--  Login layout  -->
    <string name="email_button_label">Sign in with email</string>

    <!--  Bottom navigation menu title  -->
    <string name="bottom_nav_menu_home">Home</string>
    <string name="bottom_nav_menu_profile">Profile</string>

    <!--  Profile fragment  -->
    <string name="achievements">Achievements</string>


</resources>
